--- a/day13/web/map1.html
+++ b/day13/web/map1.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJl63Jrf4-rfS_YJDmhB23G5Od1o26CoI" async
+	<script src="https://maps.googleapis.com/maps/api/js?key=****" async
 		defer></script>
 	<style>
 		#map {
