--- a/day13/web/map2.html
+++ b/day13/web/map2.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c086c64778b15b4da61eb12d979a9733"></script>
+	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=***"></script>
 
 	<style>
 		#map {
